# DeckPilot

./: .gitignore  README.md  SPEC.md  package.json
.github/workflows/: tauri-release.yml
.history/: plan_20260219120356.md
client/: index.html  package.json  vite.config.ts
client/src/: App.tsx  AppMain.tsx  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: gamepad.rs  haptic.rs  main.rs
client/src/components/: Button.tsx  ConnectionScreen.tsx  GamepadIndicator.tsx  OverviewMode.tsx  PageIndicator.tsx  StatusBar.tsx  ToastContainer.tsx  WidgetGrid.tsx  WidgetRenderer.tsx
client/src/hooks/: useConfig.ts  useEditMode.ts  useGamepad.ts  useGestures.ts  useLiveData.ts  usePageNavigation.ts  usePageTransition.ts  useToast.ts  useWebSocket.ts
client/src/lib/: api.ts  clipboard.ts  gamepad.ts  haptics.ts  icons.tsx  platform.ts  serverUrl.ts  updater.ts
scripts/: convert-sounds.ts
server/: package.json  tsconfig.json
server/src/: app.ts  index.ts  ws.ts
server/src/actions/: audio.ts  discord.ts  engine.ts  exec.ts  input.ts  media.ts  registry.ts  soundboard.ts  system.ts
server/src/config/: defaults.ts  schema.ts  store.ts
server/src/platform/: audio-capture  audio-capture.swift  detect.ts  linux.ts  macos.ts  now-playing.swift  soundboard-player  soundboard-player.swift  types.ts  windows.ts
server/src/routes/: actions.ts  claude-hooks.ts  config.ts  discord.ts  icons.ts  sounds.ts
server/src/services/: claude-hooks-setup.ts  liveData.ts  soundboard.ts
(+29 files in other folders)
