[package]
name = "deckpilot"
version = "0.1.0"
description = "A cross-platform remote macro pad"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sdl2 = { version = "0.37", features = ["bundled", "static-link"] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
